--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,63 +8,30 @@
     >
     <Toolbar
         android:id="@+id/toolbar_changepass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorBlue"
+        style="@style/toolbar_change_password"
         />
     <TextView
-        android:layout_below="@+id/toolbar_changepass"
         android:id="@+id/title"
-        android:text="Đổi mật khẩu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textSize="30dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/dosis_bold"
-        android:textColor="@color/colorBlack"
+        style="@style/tv_change_password"
         />
 
     <EditText
         android:id="@+id/edit_oldpass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_below="@+id/title"
-        android:hint="Mật khẩu cũ"
-        android:fontFamily="@font/dosis_bold"
-        android:layout_margin="10dp"
+
+        style="@style/edt_change_password"
         />
     <EditText
         android:id="@+id/edit_newpass"
-        android:layout_width="match_parent"
-        android:fontFamily="@font/dosis_bold"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Mật khẩu mới"
-        android:layout_below="@+id/edit_oldpass"
+        style="@style/edt2_change_password"
         />
     <EditText
         android:id="@+id/edit_newpass_again"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dosis_bold"
-        android:layout_margin="10dp"
-        android:hint="Nhập lại mật khẩu mới"
-        android:layout_below="@+id/edit_newpass"
+        style="@style/edt3_change_password"
         />
 
     <Button
         android:id="@+id/btnChange"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dosis_bold"
-        android:layout_below="@+id/edit_newpass_again"
-        android:layout_margin="10dp"
-        android:text="Đổi mật khẩu"
-        android:textSize="18dp"
-        android:background="@color/colorBlue"
-        android:textColor="@color/colorWhite"
+        style="@style/btn_change_password"
         />
 
 </RelativeLayout>
