--- a/app/src/main/res/layout/activity_feed_back.xml
+++ b/app/src/main/res/layout/activity_feed_back.xml
@@ -8,55 +8,27 @@
 
     <Toolbar
     android:id="@+id/toolbar_feedback"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorBlue"
+    style="@style/toolbar_feed_back"
     />
     <TextView
-        android:layout_below="@+id/toolbar_feedback"
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Phản Hồi"
-        android:textSize="30dp"
-        android:textColor="@color/colorBlack"
-        android:fontFamily="@font/dosis_bold"
-        android:layout_height="wrap_content"
+        style="@style/tv_feed_back"
         />
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/title"
+        style="@style/Rlt_feed_back"
         >
 
         <EditText
             android:id="@+id/edit_price"
-            android:layout_width="match_parent"
-            android:hint="Lý do"
-            android:layout_margin="10dp"
-            android:layout_height="wrap_content"
+            style="@style/edt1_feed_back"
             />
         <EditText
             android:id="@+id/edit_producer"
-            android:hint="Miêu tả"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:lines="10"
-            android:gravity="start|top"
-            android:layout_margin="10dp"
-            android:inputType="textLongMessage"
-            android:layout_below="@id/edit_price"
+            style="@style/edt2_feed_back"
             />
         <Button
             android:id="@+id/btn_send"
-            android:layout_below="@+id/edit_producer"
-            android:text="Gửi"
-            android:layout_margin="10dp"
-            android:textStyle="bold"
-            android:textColor="@color/colorWhite"
-            android:background="@color/colorBlue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/btn_feed_back"
             />
 
     </RelativeLayout>
