--- a/app/src/main/res/layout/activity_manager_user.xml
+++ b/app/src/main/res/layout/activity_manager_user.xml
@@ -8,27 +8,15 @@
 
     <Toolbar
         android:id="@+id/toolbar_transaction_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorBlue"
-        android:layout_alignParentTop="true"
+        style="@style/toolbar_manager_user"
         />
 
     <TextView
         android:id="@+id/text_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_transaction_history"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="@font/dosis_bold"
-        android:text="Quản lý người dùng"
-        android:textColor="@color/colorBlack"
-        android:textSize="30dp" />
+        style="@style/tv_manager_user"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_manager_users"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/text_title"
+       style="@style/Rcv_manager_user"
         />
 
 
