--- a/app/src/main/res/layout/dialog_insert_manager_phone.xml
+++ b/app/src/main/res/layout/dialog_insert_manager_phone.xml
@@ -3,76 +3,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        style="@style/Rlt_insert_manager_phone"
         >
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/dosis_bold"
-            android:text="Thêm sản phẩm"
-            android:textColor="@color/colorBlack"
-            android:textSize="20dp"
-            android:layout_centerHorizontal="true"
+            style="@style/tv_insert_manager_phone"
             />
 
         <EditText
             android:id="@+id/edit_idPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:hint="mã id điện thoại" />
+            style="@style/edt1_insert_manager_phone" />
 
         <EditText
             android:id="@+id/edit_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/edit_idPhone"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:hint="Giá tiền" />
+            style="@style/edt2_insert_manager_phone" />
 
         <EditText
             android:id="@+id/edit_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/edit_price"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:hint="link ảnh" />
+            style="@style/edt3_insert_manager_phone"/>
 
         <EditText
             android:id="@+id/edit_phoneName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/edit_image"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:hint="Tên điện thoại" />
+            style="@style/edt4_insert_manager_phone" />
 
         <EditText
             android:id="@+id/edit_producer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/edit_phoneName"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:hint="Tên hãng sản xuất" />
+            style="@style/edt5_insert_manager_phone"/>
         <Button
             android:id="@+id/updatePhone"
-            android:layout_below="@+id/edit_producer"
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:text="thêm"
-            android:textSize="20dp"
-            android:background="@color/colorBlue"
-             android:textColor="@color/colorWhite"
-            android:layout_height="wrap_content"
+            style="@style/bnt_insert_manager_phone"
             />
     </RelativeLayout>
 </RelativeLayout>
