--- a/app/src/main/res/layout/manager_phone_item.xml
+++ b/app/src/main/res/layout/manager_phone_item.xml
@@ -5,57 +5,28 @@
 
     >
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+       style="@style/Rlt_manager_phone_item"
         >
         <ImageView
             android:id="@+id/image_managerPhone"
-            android:layout_width="100dp"
-            android:layout_margin="10dp"
-            android:layout_height="120dp"
+            style="@style/img_manager_phone_item"
             />
         <TextView
             android:id="@+id/edit_idPhone"
-            android:text="ten dien thoai"
-            android:layout_alignParentTop="true"
-            android:fontFamily="@font/dosis_bold"
-            android:textColor="@color/colorBlack"
-            android:textSize="17dp"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@+id/image_managerPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/tv1_manager_phone_item"
             />
         <TextView
             android:id="@+id/pricePhone"
-            android:text="gia tien"
-            android:fontFamily="@font/dosis_bold"
-            android:layout_toRightOf="@+id/image_managerPhone"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/edit_idPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/tv2_manager_phone_item"
             />
         <TextView
             android:id="@+id/edit_producer"
-            android:text="ten hang"
-            android:fontFamily="@font/dosis_bold"
-            android:layout_toRightOf="@+id/image_managerPhone"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/pricePhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/tv3_manager_phone_item"
             />
 
         <ImageView
             android:id="@+id/image_del"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_delete_forever_24"
-            android:layout_marginTop="23dp"
-            android:layout_marginRight="24dp"
+            style="@style/img2_manager_phone_item"
             />
     </RelativeLayout>
 
