--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,90 +8,39 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        style="@style/abc"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-
-        android:background="@color/colorBlue"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-
+        style="@style/toolbar_forgot_password"
         />
 
     <View
-        android:layout_below="@id/toolbar"
         android:id="@+id/topView"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/colorBlue"
+        style="@style/view1_forgot_password"
         />
 
     <View
         android:id="@+id/view5"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_below="@id/topView"
-        android:layout_marginTop="-1dp"
-        android:background="@drawable/wave" />
+        style="@style/view2_forgot_password" />
 
     <TextView
         android:id="@+id/topText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:fontFamily="@font/regular"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="85dp"
-        android:text="Quên mật khẩu"
-        android:textColor="@android:color/black"
-        android:textSize="35sp"
+        style="@style/tv_forgot_password"
         />
 
 
     <EditText
         android:id="@+id/ed_Email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view5"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="-2dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/round_border"
-        android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="16dp"
-        android:hint="@string/email"
-        android:padding="16dp"
+        style="@style/edt1_forgot_password"
         />
 
 
     <Button
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
         android:id="@+id/btn_send_email"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/ed_Email"
-        android:background="@drawable/round_bg"
-        android:layout_width="match_parent"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Gửi password vào email"
-
+        style="@style/btn_forgot_password"
         />
 
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:indeterminateTint="#32ECEC"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_below="@+id/btn_send_email"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content" />
+        style="@style/pro_forgot_password"/>
 
 
 </RelativeLayout>
