--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,32 +8,22 @@
 
     <View
         android:id="@+id/topView"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:background="@color/colorBlue"
+        style="@style/view1_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         />
 
     <View
         android:id="@+id/view5"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:background="@drawable/wave"
+        style="@style/view2_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topView" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:contentDescription="@string/top_icon"
+        style="@style/img_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_person"
@@ -41,15 +31,7 @@
 
     <TextView
         android:id="@+id/topText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="48dp"
-        android:fontFamily="@font/regular"
-        android:text="ĐĂNG NHẬP HỆ THỐNG"
-        android:textColor="@android:color/white"
-        android:textSize="25dp"
+        style="@style/tv_login"
         app:layout_constraintEnd_toStartOf="@+id/imageView5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/topView"
@@ -57,37 +39,15 @@
 
     <EditText
         android:id="@+id/edUserName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/round_border"
-        android:drawableStart="@drawable/ic_email"
-        android:drawableLeft="@drawable/ic_email"
-        android:drawablePadding="16dp"
-
-        android:hint="@string/email"
-        android:padding="16dp"
-        android:textStyle="bold"
+        style="@style/edt1_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view5" />
 
     <EditText
         android:id="@+id/edPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/round_border"
-        android:drawableStart="@drawable/ic_lock"
-        android:drawableLeft="@drawable/ic_lock"
-        android:drawablePadding="16dp"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:padding="16dp"
-        android:textStyle="bold"
+        style="@style/edt2_login"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,12 +55,7 @@
 
     <CheckBox
         android:id="@+id/chkRememberPass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/regular"
-        android:text="Lưu mật khẩu"
+        style="@style/check_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,17 +63,7 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/round_bg"
-        android:fontFamily="@font/regular"
-        android:text="@string/login"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        style="@style/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edPassword" />
@@ -126,17 +71,7 @@
 
     <Button
         android:id="@+id/btnregister"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/round_bg"
-        android:fontFamily="@font/regular"
-        android:text="@string/register"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        style="@style/btn_dangky"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,16 +79,7 @@
 
     <TextView
         android:id="@+id/forgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:fontFamily="@font/regular"
-        android:text="@string/forgot_password"
-        android:textColor="@color/colorBlue"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        style="@style/tv_forgot_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnregister" />
@@ -161,10 +87,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="104dp"
+        style="@style/CardView_fb"
         app:cardCornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -173,17 +96,11 @@
         app:layout_constraintVertical_bias="0.341">
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
+            style="@style/btn_loginfb"/>
 
         <ImageView
             android:id="@+id/sign_facebook"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/ic_baseline_facebook_24"
-            android:textColor="#ffffff"
-            android:textSize="22sp"
+            style="@style/img_fb"
             tools:layout_editor_absoluteX="272dp"
             tools:layout_editor_absoluteY="595dp" />
 
@@ -191,31 +108,23 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview1"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="104dp"
+        style="@style/CardView_gg"
         app:cardCornerRadius="30dp"
-
         app:layout_constraintEnd_toStartOf="@+id/cardview2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
-        android:layout_marginTop="10dp"
         app:layout_constraintVertical_bias="0.413"
         >
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/signin_google"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
+            style="@style/btn_logingg"/>
+
         <ImageView
             android:id="@+id/google"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/ic_google"
-            android:textColor="#ffffff"
-            android:textSize="22sp"
+            style="@style/img_gg"
+
             tools:layout_editor_absoluteX="272dp"
             tools:layout_editor_absoluteY="595dp" />
 
