--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -3,59 +3,37 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            style="@style/Rlt_send_message"
             >
             <RelativeLayout
                 android:id="@+id/relative_top"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/colorWhite"
+                style="@style/Rlt_top"
                 >
                 <ImageView
                     android:id="@+id/image_user"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@mipmap/ic_launcher"
+                    style="@style/img_send_message"
                     />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="22dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorBlack"
-
-                    android:layout_toRightOf="@+id/image_user"
-                    android:text="Nguyễn Văn A" />
+                    android:id="@+id/text_send_massage"
+                   style="@style/tv_send_message" />
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_send"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/relative_top"
-                android:layout_above="@+id/linerbottom"
+                style="@style/Rcv_send_message"
                 />
             <LinearLayout
                 android:id="@+id/linerbottom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal"
+                style="@style/Ln_send_message"
                 >
 
                 <EditText
                     android:id="@+id/edit_message"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
+                    style="@style/edt_send_message"
                     />
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                   style="@style/btn_send_message"
                     />
 
             </LinearLayout>
