--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -5,34 +5,17 @@
     android:padding="8dp"
     >
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
         android:id="@+id/profile_image"
-        android:src="@mipmap/ic_launcher"
+        style="@style/img_chat_item_left"
         />
     <TextView
         android:id="@+id/show_massge"
-        android:textSize="18dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/profile_image"
-        android:padding="8dp"
-        android:text="hello"
-        android:textColor="@color/colorBlack"
-        android:background="@drawable/background_left"
+        style="@style/tv_chat_item_left"
         />
 
     <TextView
         android:id="@+id/txt_seen_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/show_massge"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="9dp"
-        android:text="TextView" />
+        style="@style/tv2_chat_item_left"/>
 
 
 </RelativeLayout>
