--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -6,28 +6,15 @@
     >
     <RelativeLayout
         android:id="@+id/relative"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        style="@style/Rlt_chat_item_right"
         >
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/profile_image"
-            android:visibility="gone"
+            style="@style/img_chat_item_right"
             />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_right"
-            android:text="hello"
-            android:layout_alignParentEnd="true"
             android:id="@+id/show_massge"
-            android:textSize="18sp"
-            android:textColor="#fff"
-            android:padding="8dp"
-            android:layout_alignParentRight="true"
+            style="@style/tv_chat_item_right"
 
             />
 
@@ -35,14 +22,6 @@
 
     <TextView
         android:id="@+id/txt_seen_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/relative"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginRight="7dp"
-        android:text="hello" />
+        style="@style/tv2_chat_item_right" />
 
 </RelativeLayout>
