--- a/app/src/main/res/layout/dialog_order.xml
+++ b/app/src/main/res/layout/dialog_order.xml
@@ -6,89 +6,39 @@
     android:background="@color/colorWhite"
     app:cardCornerRadius="20dp">
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/Rlt_dialog_order"
     >
 
         <ImageView
             android:id="@+id/image_phone"
-            android:layout_width="150dp"
-            android:layout_height="180dp"
-            android:layout_alignParentStart="true"
-
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-
+            style="@style/img_dialog_order"
             />
 
         <TextView
             android:id="@+id/edit_idPhone"
-            android:fontFamily="@font/regular"
-            android:layout_alignParentTop="true"
-            android:text="Phone"
-            android:layout_toRightOf="@+id/image_phone"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="30dp"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textColor="@color/colorBlack"
-            android:layout_marginLeft="20dp"
-            android:layout_height="wrap_content"
+            style="@style/tv_dialog_order"
             />
         <TextView
             android:id="@+id/pricePhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/image_phone"
-
-            android:layout_below="@+id/edit_idPhone"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:text="Giá tiền"
+            style="@style/tv2_dialog_order"
             />
         <Button
             android:id="@+id/buttonPlus"
-            android:layout_width="30dp"
-            android:background="@drawable/ic_baseline_add_box_24"
-            android:layout_height="30dp"
-            android:layout_toRightOf="@+id/image_phone"
-            android:layout_below="@+id/pricePhone"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
+            style="@style/btn_dialog_order"
             />
 
         <TextView
             android:id="@+id/text_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/pricePhone"
-            android:layout_marginLeft="5dp"
-            android:fontFamily="@font/dosis_bold"
-            android:layout_marginTop="35dp"
-            android:layout_toRightOf="@id/buttonPlus"
-            android:text="1" />
+
+            style="@style/tv3_dialog_order" />
         <Button
             android:id="@+id/btnMinus"
-            android:layout_below="@+id/pricePhone"
-            android:layout_toRightOf="@id/text_amount"
-            android:layout_marginTop="30dp"
-            android:layout_width="30dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/ic_baseline_indeterminate_check_box_24"
-            android:layout_height="30dp"
+
+            style="@style/btn2_dialog_order"
             />
         <Button
             android:id="@+id/btnOrder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/image_phone"
-            android:text="Đặt hàng"
-            android:layout_margin="10dp"
-            android:background="@color/colorBlue"
-            android:textColor="@color/colorWhite"
-            android:textStyle="bold"
+            style="@style/btn3_dialog_order"
 
             />
 
