--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -9,6 +9,5 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_chats"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+       style="@style/Rcv_fragment_chats"/>
 </FrameLayout>
