--- a/app/src/main/res/layout/manager_user_item.xml
+++ b/app/src/main/res/layout/manager_user_item.xml
@@ -5,45 +5,23 @@
 
     >
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/Rlt_manager_user_item"
         >
         <ImageView
             android:id="@+id/image_managerUser"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_launcher"
+            style="@style/img_manager_user_item"
             />
         <TextView
             android:id="@+id/nameUser"
-            android:textColor="@color/colorBlack"
-            android:fontFamily="@font/dosis_bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ten nguoi dung"
-            android:layout_toRightOf="@+id/image_managerUser"
-            android:layout_marginTop="10dp"
+            style="@style/tv1_manager_user_item"
             />
         <TextView
             android:id="@+id/Role"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dosis_bold"
-            android:text="vaitro"
-            android:layout_below="@+id/nameUser"
-            android:layout_toRightOf="@+id/image_managerUser"
+            style="@style/tv2_manager_user_item"
             />
         <TextView
             android:id="@+id/numberPhone"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/dosis_bold"
-            android:layout_toRightOf="@+id/image_managerUser"
-            android:layout_below="@+id/Role"
-            android:text="so dien thoai"
+            style="@style/tv3_manager_user_item"
             />
 
 
