--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,39 +13,15 @@
 
     <ImageView
         android:id="@+id/image_user"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="19dp"
-        android:src="@mipmap/ic_launcher_round" />
+        style="@style/img_nav_header" />
 
     <TextView
         android:id="@+id/text_Email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text_fullname"
-        android:layout_marginLeft="13dp"
-        android:textSize="20dp"
-        android:fontFamily="@font/dosis_bold"
-        android:textColor="@color/colorWhite"
-        android:layout_toRightOf="@+id/image_user"
-        android:text="your email" />
+        style="@style/tv1_nav_header"/>
 
     <TextView
         android:id="@+id/text_fullname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:textColor="@color/colorWhite"
-        android:fontFamily="@font/dosis_bold"
-        android:textSize="25dp"
-
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="34dp"
-        android:layout_toRightOf="@+id/image_user"
-        android:text="ho ten" />
+        style="@style/tv2_nav_header"/>
 
 
 </RelativeLayout>
