--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -8,25 +8,14 @@
 
     <ImageView
         android:id="@+id/image_user"
-        android:layout_width="96dp"
-        android:layout_height="91dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-
-        android:layout_marginTop="16dp"
+        style="@style/img_user_item"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/fullname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/dosis_bold"
-        android:textSize="18dp"
-        android:textColor="@color/colorBlack"
-        android:text="@string/ho_va_ten"
+        style="@style/tv1_user_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.341"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +23,7 @@
 
     <ImageView
         android:id="@+id/image_on"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="16dp"
+        style="@style/img2_user_item"
         app:layout_constraintEnd_toStartOf="@+id/image_user"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,23 +32,17 @@
 
     <ImageView
         android:id="@+id/image_off"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="16dp"
+        style="@style/img3_user_item"
         app:layout_constraintEnd_toStartOf="@+id/image_user"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/background_left"
-        android:contentDescription="TODO" />
+        />
 
     <TextView
         android:id="@+id/numberPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/dosis_bold"
-        android:text="@string/so_dien_thoai"
+        style="@style/tv2_user_item"
         app:layout_constraintEnd_toEndOf="@+id/fullname"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/fullname"
